# SQLBackupToFTPServer

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Application/: CMakeLists.txt  IClient.h  IDataBase.h  ILoginInfoAssessor.h  IUserDataAccessor.h  MainApplication.cc  MainApplication.h  UserData.h
src/FTPClient/: CMakeLists.txt  Client.cc  Client.h
src/Main/: CMakeLists.txt  Main.cc
src/Mapper/: CMakeLists.txt  ClientMapper.cc  ClientMapper.h  DataBaseMapper.cc  DataBaseMapper.h  LoginInfoAssessorMapper.cc  LoginInfoAssessorMapper.h  UserDataAccessorMapper.cc  UserDataAccessorMapper.h  UserDataGenerator.cc  UserDataGenerator.h
src/SQLiteDB/: CMakeLists.txt  DataBase.cc  DataBase.h  Exception.h
src/SQLiteDB/SQLite3/: CMakeLists.txt
tests/: CMakeLists.txt  DataBaseMapperTests.cc  DummyObject.h  SQLLiteDBTests.cc
